# social-data-aggregator

./: .gitignore  Cargo.toml  classify-lang.ipynb  datapool.py  detector.py  frequency.py  lda.py  main.py  network.py  reddit.py  text-mining.ipynb  text_processor.py
.ipynb_checkpoints/: text-mining-checkpoint.ipynb
src/: main.rs
src/fetchers/: twitter_fetcher.rs
